# cs

./: .buildinfo  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  .rhiza.history  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  create_kernel.sh  docker-compose.yml  genindex.html  hello.py  mkdocs.yml  objects.inv  pyproject.toml  readme.md  requirements.txt  search.html  searchindex.js  setup.py  slides.py
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CONFIG.md  dependabot.yml  renovate.json  template.yml
.github/actions/setup-project/: action.yml
.github/rulesets/: main-branch-protection.json  tag-protection.json
.github/workflows/: binder-badge.yml  binder.yml  book.yml  docker.yml  main.yml  maintain.yml  marimo.yml  pre-commit.yml  release.yml  rhiza_benchmark.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_codeql.yml  rhiza_deptry.yml  rhiza_fuzzing.yml  rhiza_marimo.yml  rhiza_mutation.yml  rhiza_release.yml  rhiza_scorecard.yml  rhiza_sync.yml  rhiza_weekly.yml  slides.yml  sync.yml  test.yml  wasm.yml
.rhiza/: .env  Makefile.rhiza  history  rhiza.mk  template.yml
.rhiza/agentic/: Makefile.agentic
.rhiza/completions/: README.md  rhiza-completion.bash  rhiza-completion.zsh
.rhiza/make.d/: bootstrap.mk  custom-env.mk  quality.mk  releasing.mk  test.mk
.rhiza/tests/: README.md
.rhiza/tests/api/: conftest.py  test_github_targets.py  test_make_variable_overrides.py  test_makefile_api.py  test_makefile_targets.py  test_releasing_targets.py
.rhiza/tests/structure/: test_project_layout.py
.rhiza/tests/sync/: conftest.py
_sources/docs/: index.md
_sources/docs/notebooks/: Danke.ipynb  Experiment1.ipynb  Experiment2.ipynb  Experiment3.ipynb  Experiment4.ipynb  Experiment5.ipynb  Optimization.ipynb  Optimization.md  Strategies.ipynb  Strategies.md
applications/: portfolio_optimization.ipynb
binder/: Dockerfile  requirements.in  requirements.txt
book/: README.md  _config.yml  _toc.yml  book.mk  genindex.html  objects.inv  search.html  searchindex.js
book/_sources/docs/: index.md
book/docs/: examples.md  index.html  index.md
book/docs/notebooks/: Danke.html  Danke.md  Experiment1.html  Experiment1.ipynb  Experiment2.html  Experiment2.ipynb  Experiment3.html  Experiment3.ipynb  Experiment4.html  Experiment4.ipynb  Experiment5.html  Experiment5.ipynb  Notebooks.md  Opt2.ipynb  Optimization.html  Optimization.ipynb  Optimization.md  Strategies.html  Strategies.ipynb  Strategies.md  reader.py  wasm.html  wasm.md
book/docs/talk/: abstract.txt  bio.txt
book/marimo/: Experiment1.py  Experiment2.py  Experiment3.py  Experiment4.py  Experiment5.py
book/marimo/notebooks/: Experiment1.html  Experiment1.py  Experiment2.py  Experiment3.py  Experiment4.py  Experiment5.py  optimize.py  portfolio.html  preamble.py
book/marimo/public/: Prices_hashed.csv
docs/: Experiment1.html  Experiment2.html  Experiment5.html  examples.html  index.html
docs/development/: MARIMO.md  OPTIMIZATION.md  SHARPE_PINS.md  TEST_LAYOUT.md
docs/notebooks/: Danke.html  Experiment1.html  Experiment2.html  Experiment3.html  Experiment4.html  Experiment5.html  Optimization.html  Strategies.html
docs/talk/: bio.txt  title.txt
marimo/: Experiment1.html  Experiment2.html  Experiment3.html  Experiment4.html  Experiment5.html
pycta/: analysis.py  beakerx.py  linalg.py  performance.py  portfolio.py  signal.py
scripts/: check_inline_pins.py  check_test_layout.py
slides/: Experiment3.html  Experiment4.html  Strategies.html
tests/: conftest.py  expected_sharpe.py  test_analysis.py  test_experiment1.py  test_experiment2.py  test_experiment3.py  test_experiment4.py  test_experiment5.py  test_notebook_sharpe.py  test_optimize.py  test_preamble.py  test_trivial.py
tests/fuzz/: fuzz_signal.py
tests/resources/: test_prices.csv
tests/test_rhiza/: test_makefile.py
wasm/Experiment1/: index.html
wasm/Experiment1/assets/: _baseEach-BhVqpGmq.js  architectureDiagram-IEHRJDOE-Z2CUN3tU.js  blockDiagram-JOT3LUYC-Bg-zoR6O.js  channel-CHvDF09Q.js  chunk-AEK57VVT-ClIU0KiZ.js  classDiagram-GIVACNV2-D3liyv8u.js  diagram-SSKATNLV-KK3-FggI.js  diagram-VNBRO52H-BRMW8_22.js  graph-B4PlaDt7.js  index-cpt8T--0.js  kanban-definition-NDS4AKOZ-DqOikLxW.js  mermaid-qyHLSkEr.js  time-BCCuZ01k.js  vega-component-Y9JU2YxD.js
wasm/Experiment2/: index.html
wasm/Experiment2/assets/: _createAggregator-Dar1666h.js  chunk-4BMEZGHF-B-oR0ql0.js  chunk-XZIHB7SX-aRhuGtT7.js  erDiagram-Q7BY3M3F-DrD7Qw6L.js  index-C8EVt-ft.js  index-Cmdt2ClF.js  index-DYKL6fXP.js  index-DdS1Rd5F.js  index-DwzoU8AX.js  journeyDiagram-U35MCT3I-BwJ2jHPC.js  min-DgA9EEQL.js  mindmap-definition-ALO5MXBD-lRzL-0zp.js  panels-CvIxD6Pe.js  radar-MK3ICKWK-jRVZDJhh.js  sankeyDiagram-QLVOVGJD-JrUoK3yt.js  sortBy-DI6dXOwV.js  xychartDiagram-VJFVF3MP-DCUPccQg.js
wasm/Experiment3/: index.html
wasm/Experiment3/assets/: VegaLite-ByqDwRg_.js  chunk-D6G4REZN-eJRu6y-p.js  chunk-RZ5BOZE2-C8iqfhbK.js  circle-play-CtlEXe8B.js  dagre-OKDRZEBW-DLydlZBr.js  data-editor-D6LjfV9Z.js  edit-page-CL8UIO8O.js  index-C5h_lHQT.css  sequenceDiagram-X6HHIX6F-Cgon8vUi.js  slides-component-Ou4W5UNn.js  stateDiagram-v2-YXO3MK2T-DdTA-uD5.js  tracing-B66e2cUy.js
wasm/Experiment4/: index.html
wasm/Experiment4/assets/: _baseMap-C7cbemRv.js  _baseUniq-SoI0cpQ5.js  chunk-A2AXSNBT-DHurIxcz.js  compile-NETm_OBQ.js  ganttDiagram-APWFNJXF-DkRqQ-wE.js  gitGraphDiagram-7IBYFJ6S-8Q6IhEgk.js  home-page-LNZh9INf.js  index-C4_ZH2Tv.js  index-Dk6mbMhk.js  index-DzVvumj1.js  index-N9CXa0UN.js  index-ocBD7mVE.js  pieDiagram-IB7DONF6-BUXoa9Rc.js  requirementDiagram-KVF5MWMF-VC7lNtU6.js  terminal-Cc9L0axU.js  timeline-definition-BDJGKUSR-D_9gdA7p.js
wasm/Experiment5/: index.html
work/: Experiment1.ipynb  Experiment2.ipynb  Experiment3.ipynb  Experiment4.ipynb  Experiment5.ipynb  Optimization.ipynb  Strategies.ipynb  Symbols.ipynb
work/data/: .gitkeep  p_ob.csv
work/pycta/: analysis.py  beakerx.py  linalg.py  performance.py  portfolio.py
work/symbols/: symbols.csv
work/talk/: abstract.txt  bio.txt
(+24 files in other folders)
