[project]
name = "cs"
version = "1.2.1"
description = "Companion materials for the Computational Statistics project."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Thomas Schmelzer" }]
license = { file = "LICENSE" }
dependencies = [
    "marimo>=0.23.9",
    "numpy>=2.4.6",
    "polars>=1.41.2",
    "plotly>=6.8.0",
    "jquantstats>=0.9.6",
    "tinycta>=0.13.2",
    "optuna>=4.9.0",
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://tschm.github.io/cs"
Repository = "https://github.com/tschm/cs"

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.deptry]
package_module_name_map = { marimo = "marimo", numpy = "numpy", polars = "polars", plotly = "plotly" }

[tool.mypy]
# Scoped to the importable modules (the Experiment notebooks are
# marimo-generated and are exercised by the Sharpe regression tests instead).
files = [
    "book/marimo/notebooks/optimize.py",
    "book/marimo/notebooks/preamble.py",
    "scripts",
]
mypy_path = "book/marimo/notebooks"
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# No type stubs published for these.
module = ["jquantstats.*", "tinycta.*", "plotly.*"]
ignore_missing_imports = true

[tool.interrogate]
# Marimo notebooks define anonymous cells as functions named "_"; those are
# generated structure, not API, so they are exempt from docstring coverage.
ignore-regex = ["^_$"]
fail-under = 100

[dependency-groups]
test = [
    "pytest>=9.1.0",
]
lint = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
]
