[project]
name = "cs"
version = "1.2.3"
description = "Companion materials for the Computational Statistics project."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Thomas Schmelzer" }]
license = { file = "LICENSE" }
dependencies = [
    "marimo>=0.23.14",
    "numpy>=2.4.6",
    "polars>=1.43.0",
    "plotly>=6.9.0",
    "jquantstats>=0.9.7",
    "tinycta>=0.14.0",
    "optuna>=4.9.0",
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://tschm.github.io/cs"
Repository = "https://github.com/tschm/cs"

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.deptry]
package_module_name_map = { marimo = "marimo", numpy = "numpy", polars = "polars", plotly = "plotly" }

[tool.mypy]
mypy_path = "book/marimo/notebooks"
strict = true

[[tool.mypy.overrides]]
# No type stubs published for these.
module = ["jquantstats.*", "tinycta.*", "plotly.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The Experiment*.py notebooks are marimo-generated. Their hand-written logic — the
# ``f`` signal functions and the Experiment 5 DCC helpers — is fully checked under
# --strict. What is deliberately *not* checked is the generated cell scaffolding:
# marimo emits every cell as a ``@app.cell``-decorated ``_(...)`` function with no
# annotations, and annotating that generated ``def _()`` boilerplate by hand would
# be wiped the next time marimo rewrites the notebook, so it buys no lasting safety.
# ``no-untyped-def`` is the only error code those generated cells raise, so we
# disable just that code for these modules — rather than excluding the whole files —
# keeping the real strategy logic under the type checker. Behaviour is additionally
# pinned end-to-end by the Sharpe regression tests (tests/test_notebook_sharpe.py).
module = ["Experiment1", "Experiment2", "Experiment3", "Experiment4", "Experiment5"]
disable_error_code = ["no-untyped-def"]

[tool.coverage.run]
# Measure branch coverage, not just line coverage, so a conditional that is only
# ever taken one way (e.g. a guard whose else-branch is never exercised) is
# reported as a partial branch rather than counting as fully covered.
branch = true
# The notebook regression tests execute each marimo notebook in a spawned
# child process for isolation. Without subprocess tracking, the cell bodies
# they run would not be counted. parallel+multiprocessing+patch let coverage
# follow those children and combine their data with the parent run.
parallel = true
concurrency = ["multiprocessing"]
sigterm = true
patch = ["subprocess"]
# Scope measurement to the notebooks. The spawn start method re-imports the
# test module in each child to locate the worker function; without this the
# child would also report the test file itself.
source = ["book/marimo/notebooks"]

[tool.coverage.report]
exclude_also = [
    # marimo emits a trailing `return <outputs>` in every generated @app.cell to
    # declare that cell's dataflow edges. Its runtime compiles the cell body
    # without that statement, so these lines are structurally unexecutable.
    "^\\s*return$",
    "^\\s*return [\\w, ]+$",
    # CLI entry guard: main() is covered through the API (test_main_*), not by
    # re-running the module as a subprocess.
    "if __name__ == .__main__.:",
]

[tool.interrogate]
# Marimo notebooks define anonymous cells as functions named "_"; those are
# generated structure, not API, so they are exempt from docstring coverage.
ignore-regex = ["^_$"]
fail-under = 100

[dependency-groups]
test = [
    "pytest>=9.1.1",
]
lint = [
    "mypy>=2.3.0",
    "ruff>=0.15.22",
]
